--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "node-fetch": "^2.6.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
-    "react-scripts": "3.2.0"
+    "react-scripts": "3.2.0",
+    "tesseract.js": "^1.0.19",
+    "tesseract.ts": "^1.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
